Fix invisible link in table header.

--- a/css/style.css
+++ b/css/style.css
@@ -492,6 +492,10 @@ table tr th, table tr td {
     text-align: left;
 }
 
+th a {
+    color: #FFF;
+}
+
 table tr td {
     background: #D3F2F7;
     color: #0099cc;
